--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./image/favicon.ico" />
     <script src="./app.js" defer></script>
-    <title>Document</title>
+    <title>FelizSanValentin</title>
 </head>
 <body>
     <div class="loading">
